--- a/style.css
+++ b/style.css
@@ -503,7 +503,7 @@ textarea {
 	background: transparent;
 	font-weight:200;
 	font-size: 24px;
-	color: white;
+	color: black;
 	font-weight:200;
 }
 
